fix for newsletter spacing

--- a/wp-content/themes/makerfaire/less/panels.less
+++ b/wp-content/themes/makerfaire/less/panels.less
@@ -513,11 +513,14 @@
 		@media (max-width:600px) {
 			background-image: none;
 		}
-      padding: 10px 0;
+      padding: 0;
       background-color: #005E9A;
       color: #fff;
       h5 {
          display: inline-block;
+      }
+      h3 {
+         margin-top: 10px;
       }
       form {
          margin-top: 7px;
@@ -553,7 +556,7 @@
     				-webkit-box-shadow: 0 0 0 30px #005E94 inset !important;
 					-webkit-text-fill-color: white;
 					-webkit-transition:none;
-					caret-color: white; 
+					caret-color: white;
 				}
             @media (max-width: 767px) {
                margin-right: 0;
@@ -573,7 +576,7 @@
          display: block;
          position: relative;
          padding-left: 30px;
-         margin-bottom: 12px;
+         margin-bottom: 10px;
          cursor: pointer;
          font-size: 22px;
          -webkit-user-select: none;
